crates/toml_edit/tests/fixtures/invalid/float/exp-double-us.stderr
TOML parse error at line 1, column 19
  |
1 | exp-double-us = 1e__23
  |                   ^
Invalid floating-point number
